--- a/app/views/payment.ejs
+++ b/app/views/payment.ejs
@@ -205,6 +205,14 @@
 			margin-top: 40px;
 		}
 
+		#userReservationsHeader {
+			background-color:rgba(0, 0, 0, 0.9); 
+			margin-bottom:0px; 
+			padding-bottom:5px; 
+			padding-top:5px;
+			border-radius:5px;
+		}
+
 		#dropdown-adult,
 		#dropdown-children {
 			margin-right: 30px;
@@ -261,6 +269,10 @@
 			padding-top: 30px;
 			text-align: center;
 			font-size: 3em;
+		}
+
+		#reservationsTable {
+			border-radius:10px;
 		}
 
 		#userIndicator {
@@ -676,19 +688,31 @@
 						<% } %>
 					<% } %>
 					<% if (userType == 'client') { %>
-						<div id="content-locked">
-							<div class="row">
-								<div class="col-lg-4 col-lg-offset-2 text-center">
-									<img src="../images/lock.png" alt="Lock" id="lock"><br>
-									<div style="font-size: 20px; color:black;">Restricted resource</div>
-								</div>
-								<div class="col-lg-4 text-center">
-									<div style="font-size: 20px; color:black; padding-top: 50px;">
-										Sorry, the content of this page is not available for clients.
-									</div>
+						<h2 class="text-center" id="userReservationsHeader">My Reservations</h2>
+						<% if (typeof userReservations != 'undefined') { %>
+							<div class="container-fluid">
+								<div class="row">
+									<table class="table table-sm table-dark text-center" id="reservationsTable">
+										<thead style="background-color:rgba(189, 211, 21, 0.9)">
+											<tr>
+											<th scope="col" class="text-center">Room #</th>
+											<th scope="col" class="text-center">Date in</th>
+											<th scope="col" class="text-center">Date out</th>
+											</tr>
+										</thead>
+										<tbody>
+											<% userReservations.forEach(function(reservation) { %>
+												<tr style="background-color:rgba(0, 0, 0, 0.5)">
+													<th scope="row" class="text-center"><%= reservation.room_id %></th>
+													<td><%= reservation.date_in.getDate() + "/" + reservation.date_in.getMonth() + "/" + reservation.date_in.getFullYear() %></td>
+													<td><%= reservation.date_out.getDate() + "/" + reservation.date_out.getMonth() + "/" + reservation.date_out.getFullYear() %></td>
+												</tr>
+											<% }) %>
+										</tbody>
+									</table>
 								</div>
 							</div>
-						</div>
+						<% } %>
 					<% } %>
 				</div>
 				
