--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -119,6 +119,9 @@
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
+
+            display: block;
+			overflow: auto;
         }
 
         .centered-form {
