--- a/app/views/pricing.ejs
+++ b/app/views/pricing.ejs
@@ -122,6 +122,9 @@ outline: 3px dotted rgb(189, 255, 6);
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
+
+            display: block;
+			overflow: auto;
         }
 
         .input-fields {
