--- a/app/views/schedule.ejs
+++ b/app/views/schedule.ejs
@@ -118,6 +118,9 @@
          background-position: center;
          background-repeat: no-repeat;
          background-size: cover;
+
+         display: block;
+			overflow: auto;
       }
 
       .available-slot {
